feat: add highlights crud api
